--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,8 +8,8 @@
     tools:context="com.rollncode.tooltippopuptest.MainActivity">
 
     <Button
-        android:text="Button"
-        android:layout_width="wrap_content"
+        android:id="@+id/button"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/button"/>
+        android:text="Click me!"/>
 </LinearLayout>
